objects/CN_Customer_Status_Trend__c.object
<CustomObject>
    <fields>
        <fullName>CN_Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Status_History__c</fullName>
        <formula>IF( ISBLANK(CN_Customer_Status__c ),&apos;New&apos;,CN_Customer_Status__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Status History</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Status__c</fullName>
        <label>Customer Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_License_Name_CN__c</fullName>
        <label>License Name CN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_License_Name_EN__c</fullName>
        <label>License Name EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>CN_Internal_Employee__c</referenceTo>
        <relationshipName>Custom_Status_Trend</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Status_Date__c</fullName>
        <formula>CN_Execution_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CN_Subcategory__c</fullName>
        <label>Subcategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Status Trend</label>
    <nameField>
        <displayFormat>CST-{0000000000}</displayFormat>
        <label>Customer Status Trend No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Status Trend</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>